# cloudyIntell

./: .gitignore  package-lock.json  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  pyproject.toml
backend/data/: cloudyintel_runs.db
backend/src/: __init__.py
backend/src/agents/generator/: domain_generators.py
backend/src/agents/validator/: domain_validators.py
backend/src/api/: app.py
backend/src/api/routes/: __init__.py  findings.py  history.py  runs.py  workflow.py
backend/src/api/schemas/: runs.py
backend/src/orchestration/graph/: provider_loop.py
backend/src/orchestration/nodes/: event_emitter.py  reducer.py
backend/src/orchestration/state/: models.py  provider_context.py
backend/src/persistence/: models.py  repositories.py  session.py
backend/src/retrieval/: evidence_mapper.py
backend/src/services/: acceptance_policy.py  findings_service.py  history_service.py  run_orchestrator.py  workflow_events.py
backend/tests/: conftest.py
backend/tests/contract/: test_findings_api.py  test_runs_api.py  test_workflow_stream_api.py
backend/tests/integration/: test_evidence_unavailable.py  test_findings_evidence.py  test_history_feedback_linkage.py  test_partial_results.py  test_provider_loops.py  test_workflow_latency.py
docs/runbooks/: cloudyintel-operator-runbook.md  cloudyintel-user-guide.md
frontend/: .env.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+28 files in other folders)
