[project]
name = "cloudyintel-backend"
version = "0.1.0"
description = "CloudyIntel FastAPI backend"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "sqlalchemy>=2.0.40",
  "langchain>=0.3.25",
  "langgraph>=0.2.70",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
